[Dev] advance chat ws - fix upload files with name too long

--- a/frontend/web/less/desktop/chat_post.less
+++ b/frontend/web/less/desktop/chat_post.less
@@ -202,6 +202,9 @@
                 .img_chat_style {
                     width: 100px;
                 }
+                .file-uploaded-link {
+                    word-wrap: break-word;
+                }
             }
         }
         .message_send{
@@ -274,6 +277,9 @@
                 }
                 .img_chat_style {
                     width: 100px;
+                }
+                .file-uploaded-link {
+                    word-wrap: break-word;
                 }
             }
         }
