--- a/frontend/web/less/mobile/chat_post.less
+++ b/frontend/web/less/mobile/chat_post.less
@@ -2,7 +2,7 @@
     background: #f4f4f4;
     .loading_image {
         position: relative;
-        bottom: 20%;
+        bottom: 30%;
         left: 50%;
         z-index: 999;
         display: none;
@@ -156,6 +156,9 @@
                 .img_chat_style {
                     width: 100px;
                 }
+                .file-uploaded-link {
+                    word-wrap: break-word;
+                }
             }
         }
         .message_send{
@@ -229,6 +232,9 @@
                 }
                 .img_chat_style {
                     width: 100px;
+                }
+                .file-uploaded-link {
+                    word-wrap: break-word;
                 }
             }
         }
